fix page load flicker

--- a/css/billboard.css
+++ b/css/billboard.css
@@ -1,6 +1,7 @@
 /* General uBillboard */
 .uds-bb {
 	position: relative;
+	overflow: hidden;
 }
 
 .uds-bb-slides {
